<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addToWishList"
                android:contentDescription="@string/add_to_wishlist"
                android:src="@drawable/like"
                android:backgroundTint="@color/white"
                android:layout_gravity="end"/>
            <ImageButton
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:id="@+id/productPhoto"
                android:contentDescription="@string/product_photo"
                android:src="@drawable/peach"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productPrice"
                android:text="@string/price"
                android:textSize="20sp"
                android:fontFamily="@font/jost_regular"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productName"
                android:text="@string/name"
                android:textSize="24sp"
                android:fontFamily="@font/jost_bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productWeight"
                android:text="weight"
                android:textSize="16sp"
                android:fontFamily="@font/jost_regular"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/grey"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:icon="@drawable/shopping_bag"
                app:iconTint="@color/primary_dark"
                android:text="@string/add_to_cart"
                android:textColor="@color/black"
                android:fontFamily="@font/jost_bold"
                android:textSize="16sp"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>