<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/welcomeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_bold"
        android:text="@string/welcome"
        android:layout_margin="4dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInputLayout"
        app:boxStrokeColor="@color/primary_dark"
        app:hintTextColor="@color/primary_dark"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeHeading"
        app:layout_constraintBottom_toTopOf="@id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmail"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInputLayout"
        app:boxStrokeColor="@color/primary_dark"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/forgotPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPassword"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/forgotPassword"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:backgroundTint="@color/primary"
        android:layout_margin="4dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="@font/jost_regular"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintBottom_toBottomOf="@id/continueWithText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/continueWithText"
        android:text="@string/or_continue_with"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintBottom_toBottomOf="@id/createAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        app:layout_constraintEnd_toStartOf="@id/createAccount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintTop_toBottomOf="@id/continueWithText" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/jost_regular"
        android:textColor="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/createAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createAccountText"
        app:layout_constraintTop_toTopOf="@+id/createAccountText" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/loginProgressbar"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>