<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="horizontal" />

    <!-- Left Component -->
    <ImageButton
        android:id="@+id/viewLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/grocery_art"
        android:src="@drawable/grocery_illustration"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_bold"
        android:id="@+id/welcomeHeading"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="26sp"
        android:text="@string/get_better_products_at_right_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLeft" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomeHeading"
        android:text="@string/grocery_tagline"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/jost_regular"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/getStarted"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:fontFamily="@font/jost_regular"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>